blur effect complete with range - range algorithm. Bug: Text disappears behind blur

--- a/BlurryLoading/style.css
+++ b/BlurryLoading/style.css
@@ -29,7 +29,7 @@ body {
   font-family: "Ubuntu", sans-serif;
 }
 
-.bg {
+.bg-div {
   background: url("https://www.thespruce.com/thmb/9EP5wfoBv3n_HkH5LW1QmtuRunE=/4500x3000/filters:fill(auto,1)/KoiPond-5fe8b3a605ef4743a55dba059cfb531b.jpg")
     no-repeat center center/cover;
   position: absolute;
